# SEMADEC-Hub

./: .env.example  .gitignore  DER.mwb  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
apps/archive/: apps.py  forms.py  urls.py
apps/archive/migrations/: 0001_initial.py  0002_initial.py
apps/archive/tests/: conftest.py  factories.py
apps/archive/views/: __init__.py  create.py  detail.py  edit.py  list.py  views.py
apps/competitions/: apps.py  forms.py  models.py  urls.py
apps/competitions/migrations/: 0001_initial.py  0002_initial.py
apps/competitions/tests/: conftest.py  factories.py
apps/competitions/views/: __init__.py  views_competitions.py  views_matches.py  views_sports.py  views_tests.py
apps/documents/: forms.py  urls.py
apps/documents/migrations/: 0001_initial.py  0002_initial.py
apps/documents/tests/: conftest.py  factories.py
apps/documents/views/: views.py
apps/editions/: apps.py  forms.py  models.py  urls.py
apps/editions/migrations/: 0001_initial.py
apps/editions/tests/: conftest.py  factories.py  test_edition_model.py  test_edition_team_model.py  test_editions_views.py
apps/editions/views/: views.py
apps/handlers/: apps.py
apps/home/: forms.py  models.py  urls.py
apps/home/migrations/: 0001_initial.py  0002_initial.py
apps/home/templatetags/: custom_tags.py
apps/home/tests/: conftest.py  factories.py  test_home_views.py
apps/home/views/: views.py
apps/news/: forms.py  models.py  urls.py
apps/news/migrations/: 0001_initial.py  0002_initial.py
apps/news/tests/: conftest.py  factories.py  test_news_views.py
apps/news/views/: __init__.py  all.py  detail.py  edit.py  list.py
apps/teams/: forms.py  models.py  urls.py
apps/teams/migrations/: 0001_initial.py
apps/teams/tests/: conftest.py  factories.py  test_class_model.py  test_class_views.py  test_course_forms.py  test_course_views.py
apps/teams/views/: __init__.py  views_classes.py  views_courses.py  views_teams.py
apps/users/: models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: conftest.py  factories.py  test_campus_model.py  test_email_model.py  test_users_views.py
apps/users/views/: __init__.py  views.py
archive/: forms.py  models.py  urls.py  views.py
archive/migrations/: 0001_initial.py  0002_initial.py  0003_alter_collection_cover.py  0004_alter_collection_cover.py
archive/tests/: conftest.py  factories.py  test_archive_forms.py  test_archive_views.py  test_collection_model.py  test_file_model.py  test_image_model.py
archive/tests/factories/: factories_archive.py
archive/views/: views.py
base/views/: __init__.py  base_detail_view.py  base_form_views.py  base_list_view.py  base_search_view.py  message_mixin.py  test_base_views.py
competitions/: forms.py  models.py  urls.py  views.py
competitions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_sport_date_time.py
competitions/tests/: conftest.py  factories.py  test_category_model.py  test_competition_model.py  test_competitions_views.py  test_match_model.py  test_matches_views.py  test_sport_form.py  test_sport_forms.py  test_sport_model.py  test_test_form.py  test_test_model.py  test_test_or_sport_model.py  test_test_team_form.py  test_tests_views.py
competitions/tests/views/: test_competitions_views.py
competitions/views/: views.py  views_competitions.py  views_sports.py  views_tests.py
core/: settings.py  urls.py
docs/: DC.eddx  DER.mwb
documents/: forms.py  models.py  urls.py  views.py
documents/migrations/: 0001_initial.py
documents/tests/: conftest.py  factories.py  test_document_model.py  test_documents_views.py
documents/views/: views.py
editions/: forms.py  models.py  urls.py  views.py
editions/migrations/: 0001_initial.py
editions/tests/: conftest.py  factories.py  test_class_model.py  test_course_model.py  test_edition_model.py  test_edition_team_model.py  test_editions_views.py  test_match_team_model.py  test_team_competition_model.py  test_team_edition_model.py  test_team_model.py  test_test_team_model.py
editions/tests/factories/: factories_editions.py
editions/views/: __init__.py  views.py  views_cbv.py
handlers/: views.py
handlers/tests/: test_handlers_views.py
helpers/: decorators.py  form.py  model.py  pagination.py  random_.py  slug.py  user.py
helpers/tests/: test_decorators.py  test_forms.py  test_model.py  test_random_.py  test_slug.py
home/: forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/templatetags/: custom_tags.py
home/tests/: conftest.py  factories.py  test_tag_model.py
home/views/: views.py
news/: forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_cover.py
news/tests/: conftest.py  factories.py  test_news_model.py  test_news_views.py
news/views/: all.py  list.py
scripts/: all.py  all.sh  collectstatic.py  makemigrations.py  migrate.py  removedata.py  removemigrations.py  runserver.py
scripts/unix/: all.sh  collectstatic.sh  makemigrations.sh  removedata.sh  removemigrations.sh
scripts/windows/: all.ps1  removedata.ps1  removedb.ps1  removemigrations.ps1
src/: manage.py
src/archive/: urls.py
src/competitions/: urls.py
src/core/: settings.py
src/editions/: models.py  urls.py
src/news/: urls.py
src/project/: settings.py
src/users/: urls.py
suap/: backends.py
suap/tests/: test_backends.py
teams/: forms.py  models.py  urls.py  views.py
teams/tests/: conftest.py  factories.py  test_class_model.py  test_course_forms.py  test_course_model.py
teams/views/: views_classes.py  views_courses.py  views_teams.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py  factories.py  test_administrator_model.py  test_campus_model.py  test_email_model.py  test_models.py  test_user_model.py  test_users_views.py
users/tests/factories/: factories_users.py
users/views/: views_cbv.py
utils/: database.py  generate_placeholder.py  generate_secret_key.py  migrations.py  remove_migrations.py  secret_key.py
(+248 files in other folders)
